# DeCurvED

./: .gitignore  Makefile  README.md  pyproject.toml
experiments/wip/SNGAN_MNIST-LeNet-K200000-D128-eps0.1_6.0-FFJORD-reg1.0-seed0/: args.json  command.sh  stats.json
experiments/wip/SNGAN_MNIST-LeNet-K200000-D128-eps0.1_6.0-FFJORD-reg1.0-seed0/tensorboard/: events.out.tfevents.1718946371.rachael.432086.0
scripts/eval/: animefaces.sh  biggan.sh  mnist.sh  proggan.sh  stylegan2.sh
scripts/train/: anime.sh  biggan.sh  mnist.sh  proggan.sh  stylegan2.sh
src/DeCurvEd/: checkpoint2model.py  commutative_score.py  download_models.py  identity.py  main.py  rank_interpretable_paths.py  sample_gan.py  train.py  traverse_attribute_space.py  traverse_latent_space.py
src/DeCurvEd/experiments/wip/SNGAN_MNIST-LeNet-K200000-D128-eps0.1_6.0-FFJORD-reg1.0-seed0/: command.sh
src/DeCurvEd/lib/: __init__.py  aux.py  cnf.py  config.py  data.py  diffeq_layers.py  ffjord.py  linear.py  normalization.py  odefunc.py  reconstructor.py  support_sets.py  trainer.py
src/DeCurvEd/lib/evaluation/archface/: arcface.py
src/DeCurvEd/lib/evaluation/au_detector/: AU_detector.py  hourglass.py
src/DeCurvEd/lib/evaluation/celeba_attributes/: celeba_attr_predictor.py
src/DeCurvEd/lib/evaluation/hopenet/: hopenet.py  pose_estimator.py
src/DeCurvEd/lib/evaluation/sfd/: detect.py  sfd_detector.py
src/DeCurvEd/models/: gan_load.py
src/DeCurvEd/models/BigGAN/: BigGAN.py  layers.py  utils.py
src/DeCurvEd/models/ProgGAN/: model.py
src/DeCurvEd/models/SNGAN/: distribution.py  sn_gen_resnet.py
src/DeCurvEd/models/StyleGAN2/: convert_weight.py  model.py
(+3 files in other folders)
