[project]
name = "DeCurvEd"
version = "0.1.0"
description = "Deep Curvilinear Editing"
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.4",
    "torch>=2.3.0",
    "scipy>=1.13.0",
    "pillow>=10.3.0",
    "torchvision>=0.18.0",
    "tensorboard>=2.16.2",
    "protobuf==4.25",
    "opencv-python>=4.9.0.80",
    "tqdm>=4.66.2",
    "scikit-image>=0.23.2",
    "matplotlib>=3.8.4",
    "torchdiffeq>=0.2.3",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
main = 'DeCurvEd:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/DeCurvEd"]

# Lint/Formatter非依存のルール
[tool.ruff]
# 除外したいファイル
# excludeを設定するとデフォルトで設定されている.venv配下などの設定が上書きされるため要注意
# extend-exclude = ["src/something.py"]
# 行文字数
# line-length = 88
# インデント幅
indent-width = 4

# Linterのルール
[tool.ruff.lint]
# Lintルール
# https://docs.astral.sh/ruff/rules/　に記載されているルールのうち、Codeが前方一致するルールが適用されます
select = ["E", "F", "I", "PLR"]
# 除外するLintルール
# selectで選択したルールから除外したいものを指定できます
ignore = ["PLR2004"]
# auto fixの対象にするルール
fixable = ["ALL"]
# auto fixから除外するルール
# editor.formatOnSaveを使う際に自動でFixされると困るものを指定できます
unfixable = ["F401"]

# Formatterのルール
[tool.ruff.format]
# 文字列をダブルクォートに統一
quote-style = "double"
# インデントをタブ文字(\t)からスペースに変換
indent-style = "space"

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
